# ubase

./: .gitignore  .mypy.ini  README.md  pyproject.toml  ubase.py
.github/workflows/: base.yml
tests/: test_ubase.py
