[tool.poetry]
name = "ubase"
version = "0.1.3"
description = "μBase is oversimpistic key-value database wrapper on top of aiosqlite"
authors = ["Grigory Bakunov <thebobuk@ya.ru>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = "^0.17.0"
ujson = {version = "^4.0.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mypy = "^0.812"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
ipython = "^7.22.0"
flake8 = "^3.9.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
